--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,14 @@
+
 name: Deploy Astro site to GitHub Pages
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 on:
   push:
@@ -28,13 +38,14 @@ jobs:
       - name: Build Astro site
         run: npm run build
 
-      - name: Diagnostics: list site/dist
-        run: ls -la site/dist
-        working-directory: ../
+      - name: Diagnostics: list dist
+        run: ls -la dist
 
       - name: Diagnostics: check index.html
-        run: test -f site/dist/index.html
-        working-directory: ../
+        run: test -f dist/index.html
+
+      - name: Configure GitHub Pages
+        uses: actions/configure-pages@v5
 
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3
@@ -42,9 +53,5 @@ jobs:
           path: site/dist
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./site/dist
-          publish_branch: gh-pages
-          force_orphan: true
+        id: deployment
+        uses: actions/deploy-pages@v4
